# module-python-template

./: .gitignore  .pre-commit-config.yaml  404.html  CHANGELOG.md  CNAME  README.md  VERSION.txt  __init__.py  cookiecutter.json  index.html  mkdocs.yml  objects.inv  pyproject.toml  pytest.ini  requirements.txt  setup.py  sitemap.xml
.github/workflows/: 2.build-publish.yml
3.0/: 404.html  index.html  sitemap.xml
3.0/about/authors/: index.html
3.0/about/contact/: index.html
3.0/about/faq/: index.html
3.0/about/license/: index.html
3.0/api-docs/MyClass/: index.html
3.0/api-docs/MyClassConfigPM/: index.html
3.0/blog/: index.html
3.0/dev/cicd/: index.html
3.0/dev/contributing/: index.html
3.0/dev/diagrams/: index.html
3.0/dev/docs/: index.html
3.0/dev/file-structure/: index.html
3.0/dev/related-projects/: index.html
3.0/dev/roadmap/: index.html
3.0/dev/scripts/: index.html
3.0/dev/sitemap/: index.html
3.0/dev/test/: index.html
3.0/getting-started/configuration/: index.html
3.0/getting-started/error-codes/: index.html
3.0/getting-started/examples/: index.html
3.0/getting-started/installation/: index.html
3.0/getting-started/prerequisites/: index.html
3.0/release-notes/: index.html
3.0/research/benchmarks/: index.html
3.0/research/references/: index.html
3.0/research/reports/: index.html
3.0/search/: search_index.json
3.1/: 404.html  index.html  objects.inv  sitemap.xml
3.1/about/authors/: index.html
3.1/about/contact/: index.html
3.1/about/faq/: index.html
3.1/about/license/: index.html
3.1/api-docs/MyClass/: index.html
3.1/api-docs/MyClassConfigPM/: index.html
3.1/blog/: index.html
3.1/dev/cicd/: index.html
3.1/dev/contributing/: index.html
3.1/dev/diagrams/: index.html
3.1/dev/docs/: index.html
3.1/dev/file-structure/: index.html
3.1/dev/related-projects/: index.html
3.1/dev/roadmap/: index.html
3.1/dev/scripts/: index.html
3.1/dev/sitemap/: index.html
3.1/dev/test/: index.html
3.1/getting-started/configuration/: index.html
3.1/getting-started/error-codes/: index.html
3.1/release-notes/: index.html
3.1/research/benchmarks/: index.html
3.1/search/: search_index.json
3.2/: 404.html  index.html  objects.inv  sitemap.xml
3.2/blog/: index.html
3.2/release-notes/: index.html
3.2/search/: search_index.json
docs/: CNAME  README.md  release-notes.md
docs/about/: license.md
docs/api-docs/: .nav.yml  MyClass.md  MyClassConfigPM.md
docs/dev/: diagrams.md  file-structure.md  sitemap.md
docs/getting-started/: configuration.md  error-codes.md  examples.md  installation.md  prerequisites.md
docs/scripts/: 3.get-version.md  4.test.md  5.bump-version.md
examples/simple/: main.py
my_template/: __init__.py  _base.py
pages/: index.html
pages/about/: index.html
pages/api-docs/: index.html
pages/blog/: index.html
pages/dev/: index.html
pages/getting-started/: index.html
pages/release-notes/: index.html
pages/research/: index.html
requirements/: requirements.dev.txt  requirements.docs.txt
scripts/: build.sh  bump-version.sh  clean.sh  diagrams.sh  get-version.sh  release.sh  test.sh
search/: search_index.json
src/my_module01/: __init__.py  __main__.py  _base.py  _utils.py  config.py
templates/configs/: config.json  config.yml
tests/: test_my_module01.py  test_my_package.py
{{cookiecutter.project_slug}}/: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  MANIFEST.in  README.md  __init__.py  mkdocs.yml  pyproject.toml  requirements.txt
{{cookiecutter.project_slug}}/docs/: README.md
{{cookiecutter.project_slug}}/scripts/: bump-version.sh  diagrams.sh  docs.sh  test.sh
{{cookiecutter.project_slug}}/tests/: test_my_module01.py  test_{{cookiecutter.module_name}}.py
(+166 files in other folders)
