[build-system]
requires = ["setuptools>=70.3.0,<81.0.0", "setuptools-scm>=8.0.4,<10.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "my_module01"
authors = [{ name = "Batkhuu Byambajav", email = "batkhuu10@gmail.com" }]
description = "This is a template module for python projects."
readme = "README.md"
requires-python = ">=3.10,<4.0"
keywords = ["my_module01", "template", "module", "python", "package"]
license-files = ["LICEN[CS]E*"]
classifiers = [
	"Development Status :: 4 - Beta",
	"Intended Audience :: Developers",
	"Topic :: Software Development :: Libraries",
	"Operating System :: OS Independent",
	"Programming Language :: Python :: 3",
	"Programming Language :: Python :: 3.10",
	"Programming Language :: Python :: 3.11",
	"Programming Language :: Python :: 3.12",
	"Programming Language :: Python :: 3.13",
]
dynamic = ["version", "dependencies", "optional-dependencies"]

# [tool.setuptools.packages.find]
# where = ["src"]
# include = ["my_module01*"]
# namespaces = false

[tool.setuptools.dynamic]
version = { attr = "my_module01.__version__.__version__" }
dependencies = { file = "./requirements.txt" }
optional-dependencies.test = { file = ["./requirements/requirements.test.txt"] }
optional-dependencies.build = { file = [
	"./requirements/requirements.build.txt",
] }
optional-dependencies.docs = { file = ["./requirements/requirements.docs.txt"] }
optional-dependencies.dev = { file = [
	"./requirements/requirements.test.txt",
	"./requirements/requirements.build.txt",
	"./requirements/requirements.docs.txt",
	"./requirements/requirements.dev.txt",
] }

# [tool.pyright]
# venvPath = "."
# venv = ".venv"

[project.urls]
Homepage = "https://github.com/bybatkhuu/module.python-template"
Documentation = "https://pymodule-docs.bybatkhuu.dev"
Repository = "https://github.com/bybatkhuu/module.python-template.git"
Issues = "https://github.com/bybatkhuu/module.python-template/issues"
Changelog = "https://github.com/bybatkhuu/module.python-template/blob/main/CHANGELOG.md"
